--- a/.gradient/workflows/stylegan2.yaml
+++ b/.gradient/workflows/stylegan2.yaml
@@ -40,9 +40,8 @@ jobs:
         sudo apt-get install -y nodejs
         curl -fsSL https://code-server.dev/install.sh | sh -s -- --dry-run
         curl -fsSL https://code-server.dev/install.sh | sh
-        wget -q https://bin.equinox.io/c/VdrWdbjqyf/cloudflared-stable-linux-amd64.deb
-        dpkg -i cloudflared-stable-linux-amd64.deb
-        code-server --bind-addr 127.0.0.1:8040 --auth none  & cloudflared tunnel
+        npm install -g localtunnel
+        code-server --bind-addr 127.0.0.1:8040 --auth none & lt --port 8040
 
         cd /inputs/stylegan2
         python run_generator.py generate-images \
